@@ -7,6 +7,12 @@ Open Vehicle Monitor System v3 - Change log
     bms volt                            -- Output only voltage info if available
     bms temp                            -- Output only temperature info if available
 - Hyundai Ioniq 5: Initial support
+- Support for specifying units in scripts
+  New commands:
+    metrics units                       -- Display available unit identifiers
+    metrics get                         -- Get at a particular metric value (with a specified unit)
+  Extended commands:
+    metrics set                         -- Support setting with a specified unit
 
 2022-09-01 MWJ  3.3.003  OTA release
 - Toyota RAV4 EV: Initial support added. Only the Tesla bus is decoded and just listening so far.
